--- a/pom.xml
+++ b/pom.xml
@@ -431,7 +431,7 @@
         <module>modules/swagger-jaxrs2-servlet-initializer</module>
         <module>modules/swagger-jaxrs2-servlet-initializer-v2</module>
         <module>modules/swagger-maven-plugin</module>
-        <module>modules/swagger-project-jakarta</module>
+<!--        <module>modules/swagger-project-jakarta</module>-->
 
     </modules>
     <reporting>
